--- a/SeeSharp/SeeSharp.WPF/RegisterPage.xaml
+++ b/SeeSharp/SeeSharp.WPF/RegisterPage.xaml
@@ -6,7 +6,29 @@
              xmlns:local="clr-namespace:SeeSharp.WPF"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
+    <Grid x:Name="LayoutRoot">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock Text="Rejestracja" FontFamily="Open Sans" FontSize="46" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,25" />
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 25">
+                <TextBlock Text="Podaj login:" FontFamily="Open Sans" FontSize="24" Margin="0 0 15 0" />
+                <TextBox x:Name="LoginBox" Width="150" />
+            </StackPanel>
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal" Margin="0 0 0 25">
+                <Button x:Name="LoginButton" Click="Login_OnClick" Cursor="Hand" IsEnabled="False" Height="30" Width="100" Content="Zaloguj się" FontWeight="Bold" FontFamily="Open Sans" Margin="0 0 15 0">
+                    <Button.Effect>
+                        <DropShadowEffect />
+                    </Button.Effect>
+                </Button>
+                <Button x:Name="RegisterButton" Cursor="Hand" Content="Rejestruj się" Margin="0 0 15 0" Height="30" Width="100" FontFamily="Open Sans" Click="Register_OnClick" FontWeight="Bold">
+                    <Button.Effect>
+                        <DropShadowEffect />
+                    </Button.Effect>
+                </Button>
+            </StackPanel>
+            <TextBlock Visibility="Collapsed" x:Name="RegisterAlert" Text="Pomyślnie zarejestrowano konto o loginie {0}! Twój kod rejestracyjny to: {1}" TextWrapping="Wrap" FontFamily="Open Sans" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="14" />
+        </StackPanel>
     </Grid>
 </UserControl>
