--- a/SeeSharp/SeeSharp.WPF/App.xaml
+++ b/SeeSharp/SeeSharp.WPF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SeeSharp.WPF"
-             StartupUri="MainPage.xaml">
+             StartupUri="WindowPage.xaml">
     <Application.Resources>
         <Style x:Key="ProgressTextStyle" TargetType="TextBlock">
             <Setter Property="Foreground" Value="#999999" />
