--- a/SeeSharp/SeeSharp.WPF/MainPage.xaml
+++ b/SeeSharp/SeeSharp.WPF/MainPage.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SeeSharp.WPF.MainPage"
+﻿<UserControl x:Class="SeeSharp.WPF.MainPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SeeSharp.WPF"
         mc:Ignorable="d"
-        Title="Przewodnik .NET" Height="550" Width="1150" WindowStartupLocation="CenterScreen">
+        d:DesignHeight="1000" d:DesignWidth="1600">
     <Grid x:Name="LayoutRoot" Background="White" KeyUp="LayoutRoot_KeyUp">
         <Grid>
             <Grid.ColumnDefinitions>
@@ -180,8 +180,7 @@
                         <TextBlock Text="Przewodnik po .NET" FontFamily="Open Sans" FontSize="48" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
                     </Viewbox>
                 </Grid>
-                <Grid Grid.Row="1" x:Name="DynamicView" Background="#FFF1F1F1">
-                </Grid>
+                <ContentControl Grid.Row="1" x:Name="DynamicView"></ContentControl>
                 <Grid Grid.Row="2" Background="#FF2D3370">
                     <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Text="Wersja: 0.01" x:Name="AppVersion" Margin="5 0 0 0" />
                     <TextBlock Margin="0 0 15 0" x:Name="SectionBlock" Text="Jesteś w sekcji: " Foreground="White" FontFamily="Open Sans" FontSize="16" HorizontalAlignment="Right" VerticalAlignment="Center"></TextBlock>
@@ -189,4 +188,4 @@
             </Grid>
         </Grid>
     </Grid>
-</Window>
+</UserControl>
