--- a/SeeSharp/SeeSharp.WPF/AchivmentAlert.xaml
+++ b/SeeSharp/SeeSharp.WPF/AchivmentAlert.xaml
@@ -1,12 +1,22 @@
-﻿<UserControl x:Class="SeeSharp.WPF.AchivmentAlert"
+﻿<Window x:Class="SeeSharp.WPF.AchivmentAlert"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SeeSharp.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
+             Width="400" Height="300"
+           Title="Osiągnięcie odblokowane!">
+    <Grid x:Name="LayoutRoot" Margin="2">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Vertical" Grid.Row="0">
+            <Image x:Name="AchivImage" Source="Images/Achivments/CopyAndPasteDev.png" Width="130" Height="130" Margin="0 5 0 0" />
+            <TextBlock x:Name="TitleText" HorizontalAlignment="Center" Margin="0 15 0 0" FontSize="21" FontFamily="Open Sans">Nazwa osiągnięcia</TextBlock>
+            <TextBlock x:Name="DetailsText" HorizontalAlignment="Center" Margin="0 5 0 0" FontSize="12" FontFamily="Open Sans">Tutaj jakieś info o szczegółach osiągniecia</TextBlock>
+        </StackPanel>
+        <Button x:Name="OKButton" Content="OK" Click="OKButton_Click" Cursor="Hand" Width="75" Height="23" HorizontalAlignment="Right"  Margin="0,12,0,0" Grid.Row="1" />
     </Grid>
-</UserControl>
+</Window>
