--- a/SeeSharp/SeeSharp.WPF/App.xaml
+++ b/SeeSharp/SeeSharp.WPF/App.xaml
@@ -1,4 +1,11 @@
-﻿<Application x:Class="SeeSharp.WPF.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:SeeSharp.WPF" StartupUri="WindowPage.xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
+﻿<Application x:Class="SeeSharp.WPF.App" 
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+             xmlns:local="clr-namespace:SeeSharp.WPF" 
+             StartupUri="WindowPage.xaml" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             d1p1:Ignorable="d" 
+             xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
   <Application.Resources>
     <Style x:Key="ProgressTextStyle" TargetType="TextBlock">
       <Setter Property="Foreground" Value="#999999" />
@@ -151,7 +158,7 @@
         </Setter.Value>
       </Setter>
     </Style>
-        <Style x:Key="VolumeSlider" TargetType="Slider">
+    <Style x:Key="VolumeSlider" TargetType="Slider">
             <Setter Property="Maximum" Value="10" />
             <Setter Property="Minimum" Value="0" />
             <Setter Property="Value" Value="0" />
