--- a/SeeSharp/SeeSharp.WPF/MainPage.xaml
+++ b/SeeSharp/SeeSharp.WPF/MainPage.xaml
@@ -175,7 +175,7 @@
                     <RowDefinition Height="5*" />
                     <RowDefinition Height="25" />
                 </Grid.RowDefinitions>
-                <Grid Grid.Row="0">
+                <Grid Grid.Row="0" Background="#FFF1F1F1">
                     <Viewbox StretchDirection="DownOnly" Stretch="Uniform">
                         <TextBlock Text="Przewodnik po .NET" FontFamily="Open Sans" FontSize="48" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
                     </Viewbox>
