--- a/SeeSharp/SeeSharp.WPF/ModulePage.xaml
+++ b/SeeSharp/SeeSharp.WPF/ModulePage.xaml
@@ -6,9 +6,6 @@
              xmlns:local="clr-namespace:SeeSharp.WPF"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Resources>
-        <local:VolumeConverter x:Key="VolumeConverter" />
-    </UserControl.Resources>
     <Grid x:Name="LayoutRoot" SizeChanged="LayoutRoot_SizeChanged">
         <ScrollViewer x:Name="Scroll" BorderBrush="{x:Null}" BorderThickness="0">
             <StackPanel Orientation="Vertical" x:Name="Stack">
@@ -35,9 +32,9 @@
 
                         <StackPanel Grid.Row="2" Orientation="Horizontal" Background="#1B1B1B">
                             <Button x:Name="playPauseButton" Style="{StaticResource PlayButtonStyle}" Click="playPauseButton_Click" Cursor="Hand" />
-                            <Slider Cursor="Hand" Style="{StaticResource VolumeSlider}" Width="56" Minimum="0" Maximum="10" Value="{Binding Path=Volume, ElementName=media, Mode=TwoWay, Converter={StaticResource VolumeConverter}}" />
+                            <Slider x:Name="mediaVolume" Cursor="Hand" Style="{StaticResource VolumeSlider}" Width="56" Minimum="0" Maximum="10" Value="5" ValueChanged="Slider_ValueChanged" />
                             <TextBlock Margin="6,0,0,0" VerticalAlignment="Center" Style="{StaticResource ProgressTextStyle}">                 
-					            <Run Text="{Binding PositionText}" Foreground="White" />
+					            <Run x:Name="positionText" Text="{Binding PositionText}" Foreground="White" />
 					            <Run Text=" / " />
 					            <Run Text="{Binding DurationText}" />
                             </TextBlock>
